--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,22 +1,4 @@
 ---
-# This playbook contains common plays that will be run on all nodes.
-
-# for 1.6 this ansible
-- name: Create en_US.UTF-8 locale
-  locale_gen: name=en_US.UTF-8 state=present
-
-- name: NTP | Install
-  apt: name=ntp state=present
-  tags: ntp
-
-- name: NTP | Configure ntp file
-  template: src=ntp.conf.j2 dest=/etc/ntp.conf
-  tags: ntp
-  notify: Restart ntp
-
-- name: NTP | Start the ntp service
-  service: name=ntp state=started enabled=true
-  tags: ntp
 
 - name: Linux | Update cache
   apt: update_cache=yes cache_valid_time=3600
@@ -24,50 +6,41 @@
 - name: Linux | Upgrade
   apt: upgrade=dist
 
-- name: Package | Install lists packages
+- name: Package | Install packages from the list
   apt: pkg={{ item }} state=installed
   with_items:
+    #simple tools
     - aptitude
     - bash-completion
     - openssh-server
     - vim
     - git
     - git-core
-    - git-flow
-    - git-email
-    - git-extras
-    - git-svn
-    - zsh
     - curl
     - wget
     - htop
-    - ack-grep
-    - ccze
-    - tmux
-    - terminator
-    - tig
+    - atop
+    - iotop
+    - iftop
     - unzip
     - tar
     - gzip
     - bzip2
-    - nfs-kernel-server
-    - nfs-common
-    - pwgen
+    - byobu
+    #programs
+    - firefox
+    - vlc
+    - gimp
+    - audacity
+    - redis-server
+    - mongodb
+    - chromium-browser
 
-- name: Java Oracle | Add repository
-  apt_repository: repo='ppa:webupd8team/java' state=present update_cache=yes
-
-- name: Java Oracle | Automatically select the Oracle License
-  shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
-
-- name: Java Oracle | Install version 1.7.x
-  apt: name=oracle-java7-installer state=installed force=yes
-
-- name: Virtualbox | Add repository
-  apt_repository: repo='deb http://download.virtualbox.org/virtualbox/debian saucy contrib' state=present
-
-- name: Virtualbox | Add key
-  apt_key: url='http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc' state=present
-
-- name: Virtualbox | Install Virtualbox v4.3.x
-  apt: name=virtualbox-4.3 state=installed force=yes
+# - name: Virtualbox | Add repository
+#   apt_repository: repo='deb http://download.virtualbox.org/virtualbox/debian saucy contrib' state=present
+#
+# - name: Virtualbox | Add key
+#   apt_key: url='http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc' state=present
+#
+# - name: Virtualbox | Install Virtualbox v4.3.x
+#   apt: name=virtualbox-4.3 state=installed force=yes
