--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -2,33 +2,40 @@
 
 - name: Add nodesource keys
   apt_key:
-    url="https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
-    state=present
+    url: 'https://deb.nodesource.com/gpgkey/nodesource.gpg.key'
+    state: present
 
 - name: Add nodesource apt sources list deb
   apt_repository:
-    repo="deb https://deb.nodesource.com/node_4.x {{ ansible_distribution_release }} main"
-    state=present
+    repo: 'deb https://deb.nodesource.com/node_4.x {{ ansible_distribution_release }} main'
+    state: present
+    mode: '0644'
+
 
 - name: Add nodesource apt sources list deb src
   apt_repository:
-    repo="deb-src https://deb.nodesource.com/node_4.x {{ ansible_distribution_release }} main"
-    state=present
+    repo: 'deb-src https://deb.nodesource.com/node_4.x {{ ansible_distribution_release }} main'
+    state: present
+    mode: '0644'
+
 
 - name: Install nodejs
-  apt: pkg=nodejs state=latest update_cache=true
+  apt:
+    pkg: nodejs
+    state: latest
+    update_cache: true
 
 
 - name: jump to latest npm
   npm:
-    name=npm
-    version=latest
-    global=yes
-    state=present
+    name: npm
+    version: latest
+    global: yes
+    state: present
 
 - name: install n
   npm:
-    name=n
-    version=latest
-    global=yes
-    state=present
+    name: n
+    version: latest
+    global: yes
+    state: present
