--- a/roles/skype/tasks/main.yml
+++ b/roles/skype/tasks/main.yml
@@ -1,8 +1,11 @@
 ---
 - name: Add canonical partner list deb
   apt_repository:
-    repo="deb http://archive.canonical.com/ {{ ansible_distribution_release }} partner"
-    state=present
+    repo: 'deb http://archive.canonical.com/ {{ ansible_distribution_release }} partner'
+    state: present
+    mode: '0644'
 
 - name: Install skype
-  apt: pkg=skype state=latest
+  apt:
+    pkg: skype
+    state: latest
