add theme, minor tweaks

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,10 +6,9 @@
 - name: Linux | Upgrade
   apt: upgrade=dist
 
-- name: Package | Install packages from the list
+- name: Package | Install sys/console tools
   apt: pkg={{ item }} state=installed
   with_items:
-    #simple tools
     - aptitude
     - bash-completion
     - openssh-server
@@ -27,21 +26,27 @@
     - gzip
     - bzip2
     - byobu
-    #programs
+    - build-essential
+
+- name: Package | Install programs
+  apt: pkg={{ item }} state=installed
+  with_items:
     - firefox
     - links2
     - vlc
     - gimp
+    - easytag
     - audacity
     - redis-server
     - mongodb
     - chromium-browser
+    - inkscape
 
-# - name: Virtualbox | Add repository
-#   apt_repository: repo='deb http://download.virtualbox.org/virtualbox/debian saucy contrib' state=present
-#
-# - name: Virtualbox | Add key
-#   apt_key: url='http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc' state=present
-#
-# - name: Virtualbox | Install Virtualbox v4.3.x
-#   apt: name=virtualbox-4.3 state=installed force=yes
+# - name: Package | Remove unwanted
+#   apt: pkg={{ item }} state=absent
+#   with_items:
+
+# doesn't seem to work with current ansible
+# - name: Package | autoremove
+#   apt:
+#     autoremove: yes
