add calibre and rename main file

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -41,6 +41,7 @@
     - mongodb
     - chromium-browser
     - inkscape
+    - calibre
 
 # - name: Package | Remove unwanted
 #   apt: pkg={{ item }} state=absent
