--- a/roles/ppas/tasks/main.yml
+++ b/roles/ppas/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - include: asciinema.yml
 - include: atom.yml
+- include: docker.yml
+  tags: docker
 - include: flux.yml
 - include: node.yml
 - include: openshot.yml
