--- a/roles/configs/tasks/main.yml
+++ b/roles/configs/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include: theme.yml
-- include: binscripts.yml
+  #- include: binscripts.yml
 
 - name: Remove screen locker
   apt: pkg={{ item }} state=absent
