--- a/roles/configs/tasks/main.yml
+++ b/roles/configs/tasks/main.yml
@@ -2,6 +2,7 @@
 - include: theme.yml
 - include: binscripts.yml
 - include: shortcuts.yml
+- include: tweaks.yml
 
 # - name: Remove screen locker
 #   apt: pkg={{ item }} state=absent
