--- a/roles/configs/tasks/shortcuts.yml
+++ b/roles/configs/tasks/shortcuts.yml
@@ -3,13 +3,16 @@
     pkg: xfconf
     state: present
 
+# they don't seem to work :(
 
 - name: add dropdown terminal
-  become: "{{ user }}"
+  become: true
+  become_user: "{{ user }}"
   shell: "xfconf-query --create --channel xfce4-keyboard-shortcuts --property '/commands/custom/<Primary>grave' --type string --set 'xfce4-terminal --drop-down'"
 
 - name: add tiling
-  become: "{{ user }}"
+  become: true
+  become_user: "{{ user }}"
   shell: |
     xfconf-query --create --channel xfce4-keyboard-shortcuts --property '/xfwm4/custom/<Super>x' --type string --set 'tile_right_key'
     xfconf-query --create --channel xfce4-keyboard-shortcuts --property '/xfwm4/custom/<Super>z' --type string --set 'tile_left_key'
