--- a/roles/ppas/tasks/main.yml
+++ b/roles/ppas/tasks/main.yml
@@ -1,11 +1,6 @@
 ---
-# - include: asciinema.yml
-- include: docker.yml
+- import_tasks: docker.yml
   tags: docker
-  #- include: git-secret.yml
-  #tags: git-secret
-# - include: flux.yml
-- include: node.yml
-  #- include: openshot.yml
-- include: vscode.yml
-- include: googlechrome.yml
+- import_tasks: node.yml
+- import_tasks: vscode.yml
+- import_tasks: googlechrome.yml
